--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "3.0.0rc4",
     "ejs": "*",
+    "mime": "*",
     "github-flavored-markdown": "~1.0.1",
     "strftime":"~0.4.7",
     "less-middleware": "*"
