--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "optimist": "*",
     "express": "3.0.0rc4",
+    "bytes":"~0.1.0",
     "ejs": "*",
     "mime": "*",
     "github-flavored-markdown": "~1.0.1",
